--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
     </div>
     <button id="send">GENERA</button>
+    <button id="annulla">ANNULLA</button>
 
 
     <script type="text/javascript" src="script.js">
